<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/start_main_thread"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_main_thread" />

    <Button
        android:id="@+id/start_main_thread_delay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_main_thread_delay" />

    <Button
        android:id="@+id/stop_main_thread"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_main_thread" />

    <Button
        android:id="@+id/start_work_thread"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_work_thread" />

    <Button
        android:id="@+id/stop_work_thread"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_work_thread" />



    <TextView
        android:id="@+id/contentView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>
